--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,27 +1,34 @@
 @use './common.scss' as *;
 
 body {
+    max-width: 1920px; width: 100%;
     header {
+        padding: 30px;
+        background-color: transparent;
+        position: absolute;
+        top: 0; left: 0;
+        z-index: 999;
+        width: 100%;
         @include fl-row;
         justify-content: space-between; align-items: center;
         .left_nav {
             .logo_gnb_icon {
-                //@include flex-col;
+                @include flex-col; gap: 10px;
                 justify-content: center;
                 align-items: flex-start;
                 .logo {
                     a {
                         font-size: 1.688rem; //27px
-                        font-weight: 600;
+                        font-weight: 400;
                         font-family: 'NanumMyeongjo';
-                        letter-spacing: -.02rem;
+                        color: #fff;
                     }
                 }
                 #main_menu_btn {}
             }
-            .gnb_wrap {
+            .gnb_wrap { /* 임시 */ display: none;
                 padding: 30px;
-                background-color: #CDC1B0;
+                background-color: rgba(205, 193, 176, 0.85);
                 width: 336px; height: 792px;
                 border-top-right-radius: 80px;
                 #gnb_close_btn {
@@ -30,6 +37,7 @@ body {
                     justify-content: flex-end;
                 }
                 #gnb {
+                    
                     max-width: 220px; width: 100%;
                     @include flex-col; gap: 25px;
                     .gnb_menu_title {
@@ -54,30 +62,407 @@ body {
                 }
                 }
             }
-        }
         .right_nav {
-            background-color: bisque;
-            #right_menu_icons {
-                @include fl-row; gap: 15px;
-                justify-content: flex-start; align-items: center;
-                #search_btn {}
-                #profile_btn {}
-                #cart_btn {}
-            }
-            .search_wrap {
-                .close_search {
-                    #search_close_btn {}
-                    .search_form {
-                        #menu_search_input {}
-                        #clear_search_btn {}
+                #right_menu_icons {
+                    @include fl-row; gap: 15px;
+                    justify-content: flex-start; align-items: center;
+                    #search_btn {}
+                    #profile_btn {}
+                    #cart_btn {}
+                }
+                .search_wrap {
+                    display: none;
+                    /* @include flex-col; */ gap: 30px; /* flex 나중에 풀기 */
+                    justify-content: flex-start; align-items: center;
+                    background-color: rgba(205, 193, 176, 0.85);
+                    width: 622px; height: 807px;
+                    border-top-left-radius: 60px;
+                    padding-top: 85px;
+                    .close_search {
+                        @include fl-row; gap: 15px;
+                        justify-content: center; align-items: center;
+                        width: 100%;
+                        #search_close_btn {}
+                        .search_form {
+                            #menu_search_input {
+                                background-color: #F6F1E6;
+                                padding-left: 10px;
+                                border-radius: 9px;
+                                font-size: 0.625rem;
+                                width: 448px; height: 30px;
+                            }
+                        }
+                    }
+                    .rec_keywords {
+                        @include flex-col; gap: 15px;
+                        justify-content: center; align-items: center;
+                        h3 {
+                            font-size: 0.875rem; letter-spacing: -.02rem;
+                            font-weight: 300;
+                        }
+                        .keyword_row {
+                            @include fl-row; gap: 15px;
+                            justify-content: center; align-items: center;
+                            > a {
+                                font-size: 0.75rem; letter-spacing: -.02rem;
+                                color: #F6F1E6;
+                                border-radius: 9px;
+                                padding: 10px;
+                                border: 1px solid #F6F1E6;
+                            }
+                        }
                     }
                 }
-                .rec_keywords {
-                    h3 {}
-                    .keyword_row {
-                        > a {}
+            }
+    }
+    main {
+        /* 공통 */
+        * .prd_link {width: max-content; display: block;}
+        * .sect_title {@include sectionTitle}
+        * .prd_name {@include prdTitle}
+        * .prd_eng_name {@include prdEng}
+        * .prd_tag {@include prdTag}
+        * .prd_volume {@include prdVol}
+        * .price {@include prdPrice}
+        * .product_card {@include prdCardFlex}
+        * .more_btn {@include viewMoreBtn; @include fl-row; justify-content: right; width: 100%;}
+        * .prd_info {@include flex-col; gap: 12px; justify-content: flex-start; align-items: center; width: 100%;}
+        .main_bnr {
+            max-width: 100vw; max-height: 100vh;
+            #main_swiper {
+                .swiper-wrapper {
+                    .swiper-slide {
+                        width: 100%;
+                        height: 890px;
+                        @include bg_set;
+                        position: relative;
+                        span {
+                            position: absolute;
+                            left: 386px; bottom: 325px;
+                            font-size: 2.5rem; color: #fff;
+                            font-family: 'NanumMyeongjo';
+                            line-height: 150%;
+                            em {
+                                font-weight: 500; letter-spacing: 0.18rem;
+                                font-family: 'NanumMyeongjo';
+                            }
+                        }
                     }
+                    .main_bnr1 {background-image: url(../images/main_bnr_001.jpg);}
+                    .main_bnr2 {background-image: url(../images/main_bnr_002.jpg);}
+                    .main_bnr3 {background-image: url(../images/main_bnr_003.jpg);}
+                    .main_bnr4 {background-image: url(../images/main_bnr_004.jpg);}
+                }
+                .main_bnr_nav {
+                    position: relative;
+                    .swiper-pagination {color: #e9e9e9; font-weight: 200;}
+                    .swiper-pagination-current {font-weight: 400; color: #fff;}
+                    .swiper-button-prev {
+                        position: absolute; left: 45%;
+                        bottom: 50%;
+                        transform: translateY(-35%);
+                        &:after {
+                            content: ''; position:  absolute;
+                            width: 34px; height: 34px;
+                            
+                            display: block;
+                            @include bg_set;
+                            background-image: url(../images/prev_btn_swiper.png);
+                        }
+                        svg {
+                            display: none;
+                            
+                        }
+                    }
+                    .swiper-button-next {
+                        position: absolute; right: 45%;
+                        bottom: 50%;
+                        transform: translateY(-35%);
+                        &:after {
+                            content: ''; position:  absolute;
+                            width: 34px; height: 34px;
+                            display: block;
+                            @include bg_set;
+                            background-image: url(../images/next_btn_swiper.png);
+                        }
+                        svg {
+                            display: none;
+                        }
+                    }
+                }
+            }
+        }
+        .best_sec {
+            display: grid;
+            grid-template-columns: 1fr 2fr;
+            .best_left_wrap {
+                @include bg_set;
+                background-image: url(../images/best_bg.png);
+                width: 959px; height: 918px;
+                border-bottom-right-radius: 110px;
+                border-top-right-radius: 110px;
+                position: sticky; top: 0;
+            }
+            .best_right_wrap {
+                //width: calc(100% - (959px + 60px));
+                padding: 30px 30px 70px 30px;
+                .sect_title {}
+                .more_btn {}
+                .product_wrap {
+                    .product_row {
+                        @include fl-row;
+                        .prd_link {
+                            .product_card {
+                                .best_prd_img {}
+                                .prd_info {
+                                    .prd_name {}
+                                    .prd_eng_name {}
+                                    .price {}
+                                }
+
+                            }
+                        }
+                    }
+                }
+            }
+        }
+        .sub_bnr_sec {
+            padding: 50px 0;
+            .sub_bnr {
+                margin: 50px 0;
+                @include bg_set;
+                background-image: url(../images/sub_banner.png);
+                width: 100%; max-width: 1920px;
+                //height: 250px;
+                aspect-ratio: 1920 / 250;
+            }
+        }
+        .recom_sec {
+            @include flex-col;
+            padding: 0 60px;
+            .sect_title {text-align: center}
+            .more_btn {}
+            .product_wrap {
+                margin-top: 60px;
+                .product_row {
+                    @include fl-row;
+                    .prd_link {
+                        .product_card {
+                            > img {width: 100%;}
+                            .prd_info {
+                                .prd_tag {
+                                    background-color: rgba(14, 162, 102, 0.1);
+                                    color: #0EA266;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+        .etsere_bnr {
+            padding: 40px 0;
+            .bnr_wrap {
+                @include bg_set;
+                background-image: url(../images/etsere_bnr.jpg);
+                aspect-ratio: 1920 / 915;
+                width: 100%; max-width: 1920px;
+                position: relative;
+                span {
+                    position: absolute;
+                    left: 360px; top: 402px;
+                    font-size: clamp(1.5625rem, 5vw, 2.5rem); color: #fff;
+                    font-family: 'NanumMyeongjo';
+                    line-height: 150%;
+                    em {
+                        font-weight: 500; letter-spacing: 0.18rem;
+                        font-family: 'NanumMyeongjo';
+                    }
+                }
+                .bnr_popup {
+                    width: 202px; height: 238px;
+                    background-color: #fff;
+                    padding: 20px;
+                    border-radius: 10px;
+                    text-align: center;
+                    position: relative;
+                    top: 376px; left: 1280px;
+                    #bnr_plus_btn {
+                        position: absolute;
+                        top: -15px; left: -10px;
+                        
+                    }
+                    > img {}
+                    .prd_name {}
+                    .prd_eng_name {
+                        padding: 8px 0;
+                    }
+                    .price {}
+                }
+            }
+        }
+        .new_sec {
+            .sect_title {text-align: center;}
+            .more_btn {}
+            .swiper_box {
+                #swiper_new_prd {
+                    .swiper-wrapper {
+                        .swiper-slide {
+                            .product_card {
+                                .prd_info {
+                                    .prd_tag {}
+                                }
+                            }
+                        }
+                        .prd1 {}
+                    }
+                    .swiper-button-prev {
+                        &:after {
+                            position: absolute;
+                            content: '';
+                            width: 34px; height: 34px;
+                            display: block;
+                            top: 50%;
+                            background-image: url(../images/new_swiper_prev_btn.svg);
+                            @include bg_set;
+                        }
+                        svg {display: none;}
+                    }
+                    .swiper-button-next {
+                        &::after {
+                            position: absolute;
+                            content: '';
+                            width: 34px; height: 34px;
+                            display: block;
+                            top: 50%;
+                            background-image: url(../images/new_swiper_next_btn.svg);
+                            @include bg_set;
+                        }
+                        svg {display: none;}
+                    }
+                }
+            }
+        }
+        .essential_sec {
+            margin-top: 125px;
+            @include fl-row;
+            .left_wrap {
+                @include bg_set;
+                background-position: left;
+                background-image: url(../images/essential_bnr.jpg);
+                max-width: 811px; width: 100%;
+                border-bottom-right-radius: 80px;
+            }
+            .right_wrap {
+                padding: 100px 20px;
+                width: calc(100% - (811px + 120px));
+                .title_box {
+                    margin-bottom: 60px;
+                    .sect_title {text-align: center;}
+                    .more_btn {}
+                }
+                .swiper_box {
+                    #essential_swiper {
+                        .swiper-wrapper {
+                            height: 437px;
+                            .swiper-slide {
+                                .prd_link {
+                                    .product_card {
+                                        .prd_info {
+                                            .prd_tag {}
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                        .swiper-scrollbar {
+                            height: 3px;
+                            .swiper-scrollbar-drag {background-color: #D9D9D9;}
+                        }
+                    }
+                }
+
+            }
+        }
+        .review_sec {
+            .sect_title {text-align: center;}
+            .more_btn {}
+            .swiper_box {
+                #review_swiper {
+                    padding: 60px; margin: 40px;
+                    
+                    .swiper-wrapper {
+                        .swiper-slide-active {
+                            transform: translateY(-30px);
+                            z-index: 2;
+                            opacity: 1 !important;
+                        }
+                        .swiper-slide {
+                            opacity: 0.5;
+                            transition: transform 0.3s ease;
+                            > img {border-radius: 10px; width: 100%;}
+                            .review_info {
+                                margin-top: 8px;
+                                @include flex-col;
+                                gap: 8px;
+                                .stars_name_date {
+                                    @include fl-row;
+                                    justify-content: space-between; align-items: center;
+                                    .score_name {
+                                        @include fl-row; gap: 10px;
+                                        justify-content: center; align-items: center;
+                                        .stars_box {}
+                                        .reviewer_name {
+                                            font-size: 0.875rem; 
+                                            font-weight: 500;
+                                            color: #594632; letter-spacing: -0.02rem;
+                                        }
+                                    }
+                                    .date {
+                                        font-size: 0.75rem; color: #BDBDBD;
+                                        font-weight: 300; letter-spacing: -0.02rem;
+                                    }
+                                }
+                                .review_content {
+                                    p {
+                                        font-size: 0.875rem; 
+                                        font-weight: 200;
+                                        line-height: 140%; letter-spacing: -0.02rem;
+                                    }
+                                }
+                                .review_prd_wrap {
+                                    @include fl-row; justify-content: flex-start;
+                                    align-items: center; gap: 8px;
+                                    > img {}
+                                    .prd_info {
+                                        @include flex-col; justify-content: center;
+                                        align-items: flex-start; gap: 8px;
+                                        .prd_name {
+                                            font-size: 0.625rem; letter-spacing: -0.02rem;
+                                        }
+                                        .price {font-size: 0.625rem; letter-spacing: -0.02rem;}
+                                    }
+                                }
+                            }
+                        }
+                    }
+                    .swiper-button-next,
+                        .swiper-button-prev {
+                        position: absolute;
+                        top: 50%;
+                        transform: translateY(-50%);
+                        z-index: 10;
+                        }
+
+                        .swiper-button-next {
+                        right: -30px; // или 10px, в зависимости от дизайна
+                        }
+
+                        .swiper-button-prev {
+                        left: -30px;
+                        }
                 }
             }
         }
     }
+}
